@@ -11,6 +11,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* BUGFIX - Geometry info on the status bar now correctly updates after arrow keys or Escape key
 	* BUGFIX - New image creation from system clipboard now respects "Undoable" toggle
 	* BUGFIX - Problem with layers list in inactive dock tab sometimes not updating is now eliminated
+	* BUGFIX - All keyboard shortcuts now work in Image View mode, as they should
 	* BUGFIX - PAM files with type BLACKANDWHITE are no longer loaded as grayscale
 	* BUGFIX - Animation cycling now doesn't skip over the last frame of a GIF loaded into layers
 
